Fixed armor labels alignment

--- a/styles/app/components/armor.css
+++ b/styles/app/components/armor.css
@@ -1,7 +1,6 @@
 ﻿.armor.component .label {
     font-size: 8pt;
     color: #333333;
-    text-align: center;
 }
 
 .armor.component .textInput {
